--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -15,7 +15,7 @@ $rootsize-2: 15;                      // 30px line-height body text
 $rootsize-3: 17;                      // 34px line-height body text
 $rootsize-4: 18;                      // 36px line-height body text
 
-// Control the line-length with max-width values for the container. Aim for 45-75 characters a line if possible, at smaller sizes type size is more important.
+// Control the line-length with max-width values for the container. Aim for 75–100 characters a line when possible, at smaller sizes type size is more important.
 $maxwidth-0: #{500 / $rootsize-0}rem; // 500px wide
 $maxwidth-1: #{520 / $rootsize-1}rem; // 520px wide
 $maxwidth-2: #{550 / $rootsize-2}rem; // 550px wide
@@ -23,8 +23,8 @@ $maxwidth-3: #{620 / $rootsize-3}rem; // 620px wide
 $maxwidth-4: #{700 / $rootsize-4}rem; // 700px wide
 
 // Add the typefaces here. A Regular, Italic and Bold weight of a serif & Regular and Bold weight of a sans-serif are recommended to use. Keep the fallbacks if you like.
-$serif: "skolar", Georgia, Times, serif;
-$sans-serif: "freight-sans-pro", Helvetica, Arial, sans-serif;
+$serif: Georgia, Times, serif;
+$sans-serif: Helvetica, Arial, sans-serif;
 
 // Text colours. British English, there is totally a 'u' in there.
 $headingColour: #212121;
