--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -17,20 +17,21 @@ $rootsize-4: 18;                      // 36px line-height body text
 
 // Control the line-length with max-width values for the container. Aim for 75–100 characters a line when possible, at smaller sizes type size is more important.
 $maxwidth-0: #{500 / $rootsize-0}rem; // 500px wide
-$maxwidth-1: #{520 / $rootsize-1}rem; // 520px wide
-$maxwidth-2: #{550 / $rootsize-2}rem; // 550px wide
-$maxwidth-3: #{620 / $rootsize-3}rem; // 620px wide
-$maxwidth-4: #{700 / $rootsize-4}rem; // 700px wide
+$maxwidth-1: #{550 / $rootsize-1}rem; // 550px wide
+$maxwidth-2: #{600 / $rootsize-2}rem; // 600px wide
+$maxwidth-3: #{680 / $rootsize-3}rem; // 650px wide
+$maxwidth-4: #{750 / $rootsize-4}rem; // 720px wide
 
-// Add the typefaces here. A Regular, Italic and Bold weight of a serif & Regular and Bold weight of a sans-serif are recommended to use. Keep the fallbacks if you like.
-$serif: Georgia, Times, serif;
-$sans-serif: Helvetica, Arial, sans-serif;
+// Add typefaces here.
+$serif: "edita", Georgia, Times, serif;
+$sans-serif: "ratio", Helvetica, Arial, sans-serif;
 
 // Text colours. British English, there is totally a 'u' in there.
-$headingColour: #212121;
-$bodyColour: #313131;
-$linkColour: #0C89DB;
-$hoverColour: #212121;
+$headingColour: #2E2E2E;
+$bodyColour: #494949;
+$linkColour: #D52836;
+$hoverColour: #494949;
+$captionColour: #7E7E7E;
 $white: #FFFFFF;
 
 // Background colours.
