--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -79,7 +79,7 @@ a {
   // Paragraphs. OpenType ligatures and oldstyle figures enabled if available.
   p {
     -webkit-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
-    -moz-font-feature-settings: 'kern=1, onum=1, liga=1';
+    -moz-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
     -ms-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
     -o-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
     font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
@@ -89,7 +89,7 @@ a {
   // Headings. OpenType ligatures, discretionary ligatures and lining figures enabled if available.
   h1, h2, h3, h4, h5, h6 {
     -webkit-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
-    -moz-font-feature-settings: 'dlig=1, liga=1, lnum=1, kern=1';
+    -moz-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
     -ms-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
     -o-font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
     font-feature-settings: 'dlig' 1, 'liga' 1, 'lnum' 1, 'kern' 1;
@@ -214,9 +214,9 @@ a {
   ul, ol {
     margin-bottom: 2rem;
     li {
-      -moz-font-feature-settings: 'kern=1, onum=1, liga=1';
-      -ms-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
       -webkit-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
+      -moz-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
+      -ms-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
       -o-font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
       font-feature-settings: 'kern' 1, 'onum' 1, 'liga' 1;
       margin-left: 2rem;
@@ -327,9 +327,9 @@ a {
 
   // Real small caps.
   .small-caps {
-    -moz-font-feature-settings: 'smcp=1, kern=1';
-    -ms-font-feature-settings: 'smcp' 1, 'kern' 1;
     -webkit-font-feature-settings: 'smcp' 1, 'kern' 1;
+    -moz-font-feature-settings: 'smcp' 1, 'kern' 1;
+    -ms-font-feature-settings: 'smcp' 1, 'kern' 1;
     -o-font-feature-settings: 'smcp' 1, 'kern' 1;
     font-feature-settings: 'smcp' 1, 'kern' 1;
     letter-spacing: 0.1rem;
@@ -337,18 +337,18 @@ a {
 
   // Consistent height numbers with OpenType.
   .lining-numerals {
-    -moz-font-feature-settings: 'lnum=1, kern=1';
-    -ms-font-feature-settings: 'lnum' 1, 'kern' 1;
     -webkit-font-feature-settings: 'lnum' 1, 'kern' 1;
+    -moz-font-feature-settings: 'lnum' 1, 'kern' 1;
+    -ms-font-feature-settings: 'lnum' 1, 'kern' 1;
     -o-font-feature-settings: 'lnum' 1, 'kern' 1;
     font-feature-settings: 'lnum' 1, 'kern' 1;
   }
 
   // Ascending and descending numbers with OpenType.
   .oldstyle-numerals {
-    -moz-font-feature-settings: 'onum=1, kern=1';
-    -ms-font-feature-settings: 'onum' 1, 'kern' 1;
     -webkit-font-feature-settings: 'onum' 1, 'kern' 1;
+    -moz-font-feature-settings: 'onum' 1, 'kern' 1;
+    -ms-font-feature-settings: 'onum' 1, 'kern' 1;
     -o-font-feature-settings: 'onum' 1, 'kern' 1;
     font-feature-settings: 'onum' 1, 'kern' 1;
   }
