--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -35,6 +35,6 @@ $captionColour: #7E7E7E;
 $white: #FFFFFF;
 
 // Background colours.
-$headBackgroundColour: #F8F7F3;
+$headBackgroundColour: #29323A;
 $backgroundColour: #FCFCFC;
-$codeBackgroundColour: #002028;
+$codeBackgroundColour: #29323A;
