--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -13,35 +13,12 @@
 /* Styles */
 /* --------------------------------------- */
 
-// Base styling, feel free to change.
+// Demo styles. Remove and split into modules as modules/_header.scss
 
 body {
-  background-color: $headBackgroundColour;
+  background-color: $headBackgroundColour; // If short page footer will get this, hence not using $backgroundColour.
   color: $bodyColour;
   overflow-x: hidden;
-}
-
-header {
-  background: $headBackgroundColour;
-  border-bottom: 0.1rem solid darken($headBackgroundColour,10%);
-  position: relative;
-  z-index: 1;
-}
-
-.logo {
-  color: transparent;
-  background: url(../img/logo.png);
-  font: 0/0 a;
-  height: 40px;
-  width: 150px;
-  margin: 1rem 5%;
-  @include breakpoint(break-3) {
-    margin: 1.5rem 0%;
-    position: absolute;
-  }
-  @include breakpoint(break-4) {
-    margin: 2rem 0;
-  }
 }
 
 section {
@@ -69,24 +46,11 @@ section {
   }
 }
 
-.container--header {
-  margin: 0 auto;
-  position: relative;
-  width: 100%;
-  @include clearfix;
-  @include breakpoint(break-3) {
-    max-width: $maxwidth-3;
-  }
-  @include breakpoint(break-4) {
-    max-width: $maxwidth-4;
-  }
-}
-
-footer {
+.global-footer {
   background: $headBackgroundColour;
   border-top: 0.1rem solid darken($headBackgroundColour,10%);
   p {
-    color: $headingColour;
+    color: $white;
     font-family: $sans-serif;
     text-align: center;
     padding: 1rem 0;
