--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,14 +1,14 @@
 /* CSS compiled from SCSS */
 /* --------------------------------------- */
 
+// Import Sassline base SCSS files in order so variables are read correctly.
 @import "base/reset";
 @import "base/variables";
 @import "base/mixins";
 @import "base/typography";
 
-// Import all modules with SASS globbing.
+// Import all SCSS modules with Sass globbing.
 @import "modules/*";
-
 
 /* Styles */
 /* --------------------------------------- */
